[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carm-control"
version = "0.1.0"
description = "TCP control helpers for Carm"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "carm",
    "pynput",
    "lcm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carm_waypoint*", "controller*", "utils*"]
exclude = ["examples*"]
